New ScaleRecipe dialog.  Updated csv files.